--- a/build.gradle
+++ b/build.gradle
@@ -18,9 +18,10 @@ repositories {
     // Use 'jcenter' for resolving your dependencies.
     // You can declare any Maven/Ivy/file repository here.
     jcenter()
+    mavenCentral()
     maven { 
     	url 'https://raw.github.com/slok/algs4-mvn-repo/master'
-    	url  "http://dl.bintray.com/olivercoleman/maven"
+    	url "http://dl.bintray.com/olivercoleman/maven"
     }
 }
 
@@ -33,6 +34,7 @@ dependencies {
     compile "com.thoughtworks.xstream:xstream:1.4.8"
     compile "com.eclipsesource.minimal-json:minimal-json:0.9.4"
     compile 'com.google.guava:guava:18.0'
+    compile 'org.apache.commons:commons-lang3:3.4'
     compile 'edu.princeton.cs.algs4:algs4:1.0'
     compile(group: 'org.ojcoleman.bain', name: 'bain', version: '1.0.0', ext: 'jar')
     
