--- a/build.gradle
+++ b/build.gradle
@@ -31,13 +31,14 @@ dependencies {
     compile 'org.slf4j:slf4j-api:1.7.12'
     compile 'org.slf4j:slf4j-simple:1.7.12'
     compile "com.beust:jcommander:1.48"
-    compile "com.thoughtworks.xstream:xstream:1.4.8"
+    compile "com.thoughtworks.xstream:xstream:1.4.9"
     compile "com.eclipsesource.minimal-json:minimal-json:0.9.4"
     compile 'com.google.guava:guava:19.0'
     compile 'org.apache.commons:commons-lang3:3.4'
     compile 'org.reflections:reflections:0.9.10'
     compile 'com.googlecode.princeton-java-algorithms:algorithms:4.0.1'
     compile 'org.apache.commons:commons-csv:1.2'
+    compile 'org.apache.commons:commons-math3:3.6.1'
     compile(group: 'org.ojcoleman.bain', name: 'bain', version: '1.0.4', ext: 'jar')
     
     // aparapi not available in any repo.
