--- a/build.gradle
+++ b/build.gradle
@@ -10,7 +10,7 @@
 // Apply the java plugin to add support for Java
 apply plugin: 'java'
 
-sourceCompatibility = 1.7
+sourceCompatibility = 1.8
 version = '1.0'
 
 // In this section you declare where to find the dependencies of your project
@@ -21,9 +21,10 @@ repositories {
     mavenCentral()
     maven { 
     	url 'https://raw.github.com/slok/algs4-mvn-repo/master'
-    	url "http://dl.bintray.com/olivercoleman/maven"
+    	//url "http://dl.bintray.com/olivercoleman/maven"
+    	url "https://jitpack.io"
     }
-}
+ }
 
 // In this section you declare the dependencies for your production and test code
 dependencies {
@@ -39,7 +40,11 @@ dependencies {
     compile 'com.googlecode.princeton-java-algorithms:algorithms:4.0.1'
     compile 'org.apache.commons:commons-csv:1.2'
     compile 'org.apache.commons:commons-math3:3.6.1'
-    compile(group: 'org.ojcoleman.bain', name: 'bain', version: '1.0.4', ext: 'jar')
+    compile (group: 'org.yaml', name: 'snakeyaml', version: '1.18')
+    // compile (group: 'org.ojcoleman.bain', name: 'bain', version: '1.0.4', ext: 'jar')
+    compile 'com.github.OliverColeman:ojc-java-collections:0.9.1'
+    compile 'com.github.OliverColeman:bain:db3376f'
+    compile 'com.github.simbrain:simbrain:49c0a2a' // branch Simbrain_3.02
     
     // aparapi not available in any repo.
     compile fileTree(dir: 'lib', include: 'aparapi.jar')
